--- a/views/default/layout_base.html
+++ b/views/default/layout_base.html
@@ -43,6 +43,7 @@
         <link rel="stylesheet" href='{{=URL("static","css/bootstrap.min.css")}}' />
         <link rel="stylesheet" href='{{=URL("static","css/bootstrap-responsive.min.css")}}' />
         <link rel="stylesheet" href='{{=URL("static","css/elusive-webfont.css")}}'>
+        <link rel="stylesheet" href='{{=URL("static","css/style-icons.css")}}'>
 
         <link rel="stylesheet" href='{{=URL("static","css/base.css")}}' />
         <link rel="stylesheet" href='{{=URL("static","css/base.grey.css")}}' class="skin-color" />
