--- a/static/css/style-icons.css
+++ b/static/css/style-icons.css
@@ -1,10 +1,10 @@
 @font-face {
     font-family: 'icomoon';
-    src:    url('../fonts/icomoon.eot?vytwoc');
-    src:    url('../fonts/icomoon.eot?vytwoc#iefix') format('embedded-opentype'),
-        url('../fonts/icomoon.ttf?vytwoc') format('truetype'),
-        url('../fonts/icomoon.woff?vytwoc') format('woff'),
-        url('../fonts/icomoon.svg?vytwoc#icomoon') format('svg');
+    src:    url('../fonts/icomoon.eot?c73fpq');
+    src:    url('../fonts/icomoon.eot?c73fpq#iefix') format('embedded-opentype'),
+        url('../fonts/icomoon.ttf?c73fpq') format('truetype'),
+        url('../fonts/icomoon.woff?c73fpq') format('woff'),
+        url('../fonts/icomoon.svg?c73fpq#icomoon') format('svg');
     font-weight: normal;
     font-style: normal;
 }
