--- a/views/default/header.html
+++ b/views/default/header.html
@@ -71,7 +71,7 @@
           <a href="#">
             <img src="{{=URL('static', 'img/all-projects.png')}}" alt="All Projects" title="All Projects">
           </a>
-          <p>All Projects</p>
+          <p>{{=T("All Projects")}}</p>
         </div>
 
         <span class="separador"></span>
