add icons default

--- a/views/default/brainstorm.html
+++ b/views/default/brainstorm.html
@@ -51,7 +51,7 @@
                       <div class="note-header">
                         {{ if user_has_permission_for_delete_note(i.created_by): }}
                           <i class="icon-note-header icon-note-header--delete icon-trash" data-pk="{{=i.id}}"></i>
-                          <i class="icon-note-header icon-note-header--color icon-tint" data-pk="{{=i.id}}"></i>
+                          <i class="icon-note-header icon-note-header--color icon-paint" data-pk="{{=i.id}}"></i>
                         {{ pass }}
                         <div class="clearfix"></div>
                       </div>
