--- a/static/css/style-icons.css
+++ b/static/css/style-icons.css
@@ -1,10 +1,10 @@
 @font-face {
     font-family: 'icomoon';
-    src:    url('../fonts/icomoon.eot?vsl4bn');
-    src:    url('../fonts/icomoon.eot?vsl4bn#iefix') format('embedded-opentype'),
-        url('../fonts/icomoon.ttf?vsl4bn') format('truetype'),
-        url('../fonts/icomoon.woff?vsl4bn') format('woff'),
-        url('../fonts/icomoon.svg?vsl4bn#icomoon') format('svg');
+    src:    url('../fonts/icomoon.eot?l8b3ys');
+    src:    url('../fonts/icomoon.eot?l8b3ys#iefix') format('embedded-opentype'),
+        url('../fonts/icomoon.ttf?l8b3ys') format('truetype'),
+        url('../fonts/icomoon.woff?l8b3ys') format('woff'),
+        url('../fonts/icomoon.svg?l8b3ys#icomoon') format('svg');
     font-weight: normal;
     font-style: normal;
 }
@@ -24,6 +24,15 @@
     -moz-osx-font-smoothing: grayscale;
 }
 
+.icon-paint:before {
+    content: "\e90c";
+}
+.icon-trash:before {
+    content: "\e90d";
+}
+.icon-circle-arrow-down:before {
+    content: "\e90e";
+}
 .icon-brainstorm:before {
     content: "\e90b";
 }
