--- a/views/default/product_backlog.html
+++ b/views/default/product_backlog.html
@@ -19,6 +19,7 @@
             removeBacklogItens : '{{=URL("remove_backlog_itens")}}',
             changeStories : '{{=URL("change_stories")}}',
             ajax_upload : '{{=URL(r=request,f="call",args=["json","ajax_upload"])}}',
+            current: '{{=URL("product_backlog")}}'
         },
         info = {
             project_id : '{{=project.id}}',
