--- a/static/css/style-icons.css
+++ b/static/css/style-icons.css
@@ -1,10 +1,10 @@
 @font-face {
     font-family: 'icomoon';
-    src:    url('../fonts/icomoon.eot?l8b3ys');
-    src:    url('../fonts/icomoon.eot?l8b3ys#iefix') format('embedded-opentype'),
-        url('../fonts/icomoon.ttf?l8b3ys') format('truetype'),
-        url('../fonts/icomoon.woff?l8b3ys') format('woff'),
-        url('../fonts/icomoon.svg?l8b3ys#icomoon') format('svg');
+    src:    url('../fonts/icomoon.eot?lbsddr');
+    src:    url('../fonts/icomoon.eot?lbsddr#iefix') format('embedded-opentype'),
+        url('../fonts/icomoon.ttf?lbsddr') format('truetype'),
+        url('../fonts/icomoon.woff?lbsddr') format('woff'),
+        url('../fonts/icomoon.svg?lbsddr#icomoon') format('svg');
     font-weight: normal;
     font-style: normal;
 }
@@ -27,8 +27,32 @@
 .icon-paint:before {
     content: "\e90c";
 }
+.icon-tag:before {
+    content: "\e90f";
+}
+.icon-calendar:before {
+    content: "\e910";
+}
+.icon-return-key:before {
+    content: "\e915";
+}
+.icon-cog:before {
+    content: "\e911";
+}
 .icon-trash:before {
     content: "\e90d";
+}
+.icon-paper-clip:before {
+    content: "\e912";
+}
+.icon-plus-sign:before {
+    content: "\e913";
+}
+.icon-remove:before {
+    content: "\e914";
+}
+.icon-ok:before {
+    content: "\e916";
 }
 .icon-circle-arrow-down:before {
     content: "\e90e";
