implements modal 'all projects'

--- a/views/default/header.html
+++ b/views/default/header.html
@@ -68,7 +68,7 @@
         </ul>
 
         <div class="all-projects">
-          <a href="#">
+          <a href="#modalAllProjects" data-toggle="modal">
             <img src="{{=URL('static', 'img/all-projects.png')}}" alt="All Projects" title="All Projects">
           </a>
           <p>{{=T("All Projects")}}</p>
@@ -91,4 +91,152 @@
             </ul>
         </div>
     {{ pass }}
+
+    <!-- Modal All projects-->
+    <div id="modalAllProjects" class="modal modal--all-projects hide fade" tabindex="-1" role="dialog" aria-labelledby="modalAllProjectsLabel" aria-hidden="true">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+        <h3 id="modalAllProjectsLabel">{{=T('All Projects')}}</h3>
+      </div>
+      <div class="modal-body">
+        <ul>
+
+          <li class="project-card">
+            <div class="project-card--header">
+              <i class="icon icon-trash icon-project-card-delete" data-pk="666"></i>
+            </div>
+            <div class="project-card--content">
+              <img src=" http://placehold.it/64x64?text=Imagem Projeto" alt="">
+              <p class="project-card--content-title">Projeto Maneiro</p>
+            </div>
+            <div class="clear"></div>
+          </li>
+
+          <li class="project-card">
+            <div class="project-card--header">
+              <i class="icon-gear"></i>
+            </div>
+            <div class="project-card--content">
+              <img src=" http://placehold.it/64x64?text=Imagem Projeto" alt="">
+              <p class="project-card--content-title">Projeto Maneiro</p>
+            </div>
+            <div class="clear"></div>
+          </li>
+
+          <li class="project-card">
+            <div class="project-card--header">
+              <i class="icon-gear"></i>
+            </div>
+            <div class="project-card--content">
+              <img src=" http://placehold.it/64x64?text=Imagem Projeto" alt="">
+              <p class="project-card--content-title">Projeto Maneiro</p>
+            </div>
+            <div class="clear"></div>
+          </li>
+
+          <li class="project-card">
+            <div class="project-card--header">
+              <i class="icon-gear"></i>
+            </div>
+            <div class="project-card--content">
+              <img src=" http://placehold.it/64x64?text=Imagem Projeto" alt="">
+              <p class="project-card--content-title">Projeto Maneiro</p>
+            </div>
+            <div class="clear"></div>
+          </li>
+
+          <li class="project-card">
+            <div class="project-card--header">
+              <i class="icon-gear"></i>
+            </div>
+            <div class="project-card--content">
+              <img src=" http://placehold.it/64x64?text=Imagem Projeto" alt="">
+              <p class="project-card--content-title">Projeto Maneiro</p>
+            </div>
+            <div class="clear"></div>
+          </li>
+
+          <li class="project-card">
+            <div class="project-card--header">
+              <i class="icon-gear"></i>
+            </div>
+            <div class="project-card--content">
+              <img src=" http://placehold.it/64x64?text=Imagem Projeto" alt="">
+              <p class="project-card--content-title">Projeto Maneiro</p>
+            </div>
+            <div class="clear"></div>
+          </li>
+
+          <li class="project-card">
+            <div class="project-card--header">
+              <i class="icon-gear"></i>
+            </div>
+            <div class="project-card--content">
+              <img src=" http://placehold.it/64x64?text=Imagem Projeto" alt="">
+              <p class="project-card--content-title">Projeto Maneiro</p>
+            </div>
+            <div class="clear"></div>
+          </li>
+
+          <li class="project-card">
+            <div class="project-card--header">
+              <i class="icon-gear"></i>
+            </div>
+            <div class="project-card--content">
+              <img src=" http://placehold.it/64x64?text=Imagem Projeto" alt="">
+              <p class="project-card--content-title">Projeto Maneiro</p>
+            </div>
+            <div class="clear"></div>
+          </li>
+
+          <li class="project-card">
+            <div class="project-card--header">
+              <i class="icon-gear"></i>
+            </div>
+            <div class="project-card--content">
+              <img src=" http://placehold.it/64x64?text=Imagem Projeto" alt="">
+              <p class="project-card--content-title">Projeto Maneiro</p>
+            </div>
+            <div class="clear"></div>
+          </li>
+
+          <li class="project-card">
+            <div class="project-card--header">
+              <i class="icon-gear"></i>
+            </div>
+            <div class="project-card--content">
+              <img src=" http://placehold.it/64x64?text=Imagem Projeto" alt="">
+              <p class="project-card--content-title">Projeto Maneiro</p>
+            </div>
+            <div class="clear"></div>
+          </li>
+
+          <li class="project-card">
+            <div class="project-card--header">
+              <i class="icon-gear"></i>
+            </div>
+            <div class="project-card--content">
+              <img src=" http://placehold.it/64x64?text=Imagem Projeto" alt="">
+              <p class="project-card--content-title">Projeto Maneiro</p>
+            </div>
+            <div class="clear"></div>
+          </li>
+
+          <li class="project-card">
+            <div class="project-card--header">
+              <i class="icon-gear"></i>
+            </div>
+            <div class="project-card--content">
+              <img src=" http://placehold.it/64x64?text=Imagem Projeto" alt="">
+              <p class="project-card--content-title">Projeto Maneiro</p>
+            </div>
+            <div class="clear"></div>
+          </li>
+
+
+
+        </ul>
+      </div>
+    </div>
+
 </div>
