--- a/static/css/base.css
+++ b/static/css/base.css
@@ -176,6 +176,67 @@ a:hover {
 	background-color: #00d19a!important;
 }
 
+/* Modal All Projects */
+.clear {
+	clear: both;
+}
+
+.modal--all-projects {
+	width: 71.5em;
+	left: 32%
+}
+
+.modal--all-projects .modal-header {
+	background-color: #00abbd;
+	height: 84px;
+}
+
+#modalAllProjectsLabel {
+	color: #fff;
+	text-transform: uppercase;
+	text-align: center;
+    line-height: 2em;
+    font-size: 42px;
+	font-family: 'Roboto', sans-serif;
+}
+
+.modal--all-projects .modal-body {
+	max-height: 500px;
+}
+
+.project-card {
+	list-style: none;
+	float: left;
+	padding: 10px;
+	margin: 10px;
+	width: 29.2%;
+	height: 78px;
+	-webkit-box-shadow: 5px 5px 8px -3px rgba(0,0,0,0.4);
+	-moz-box-shadow: 5px 5px 8px -3px rgba(0,0,0,0.4);
+	box-shadow: 5px 5px 8px -3px rgba(0,0,0,0.4);
+}
+
+.project-card--header .icon {
+	float: right;
+	color: #777777;
+	font-size: 1.5em;
+
+}
+
+.project-card--content img{
+	border-radius: 50%;
+	float: left;
+	white-space: nowrap;
+	margin-top: .5em;
+}
+
+.project-card--content p{
+	float: left;
+	font-family: 'Roboto', sans-serif;
+	font-size: 20px;
+	margin-left: 1.5em;
+	line-height: 4em;
+}
 
 #sidebar [class^="icon-"] + span {
 	display: block;
