--- a/views/default/layout_base.html
+++ b/views/default/layout_base.html
@@ -153,6 +153,8 @@
             <script src="{{=URL('static','js/jquery-ui-1.10.3.custom.min.js')}}"></script>
             <script src='{{=URL("static","js/bootstrap.min.js")}}'></script>
             <script src='{{=URL("static","js/base.js")}}'></script>
+            <script src="https://cdn.jsdelivr.net/alertifyjs/1.6.1/alertify.min.js"></script>
+            <script src='{{=URL("static","js/all-projects.js")}}'></script>
             <!-- image upload -->
             <script src="{{=URL('static','js/jquery.imgareaselect.min.js')}}"></script>
             <script src="{{=URL('static','js/jquery.awesome-cropper.js')}}"></script>
