--- a/views/default/header.html
+++ b/views/default/header.html
@@ -97,6 +97,9 @@
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
         <h3 id="modalAllProjectsLabel">{{=T('All Projects')}}</h3>
+        <div class="modal--all-projects-search">
+          <input type="text" placeholder="{{=T('Search')}}..." /><i class="icon icon-search"></i>
+        </div>
       </div>
       <div class="modal-body">
         <ul>
